--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\monad\\anaconda3\\envs\\monadenv\\python.exe",
-    "jupyter.jupyterServerType": "local",
-    "terminal.integrated.shellArgs.windows": ["/K", "C:\\Users\\monad\\anaconda3\\Scriptsactivate.bat C:\\Users\\monad\\Anaconda3 & conda activate monadenv"]
+    "python.pythonPath": "C:\\Users\\monad\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+    "jupyter.jupyterServerType": "local"
 }
