--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Python3.9.1\\python.exe"
+    "python.pythonPath": "C:\\Python3.9.1\\python.exe",
+    "python.linting.pylintArgs": [
+        "--generated-members=cv2.*"
+    ]
 }
